@@ -62,6 +62,10 @@ the user to specify a list of received packets that should be errored.  The
 list corresponds not to the packet UID but to the sequence of received
 packets as observed by the error model.   See src/common/error-model.h
 </ul>
+<ul><b>Respond to interface events:"</b> New attribute for Ipv4GlobalRouting,
+"RespondToInterfaceEvents", which when enabled, will cause global routes
+to be recomputed upon any interface or address notification event from IPv4.
+</ul>
 
 <h2>Changes to existing API:</h2>
 
